--- a/hw-10/package.json
+++ b/hw-10/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
   },
-  "homepage": "https://ig2108.github.io/goit-js-homeworks/hw-10",
+  "homepage": "https://ig2108.github.io/goit-js-homeworks/",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
